<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ryan.studycase.StudyCase2">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/makan_malam"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="TextView"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/harga"
            android:layout_alignStart="@+id/harga"
            android:layout_below="@+id/tempat"
            android:layout_marginTop="20dp"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nama_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/menu"
            android:layout_alignStart="@+id/menu"
            android:layout_below="@+id/menu"
            android:layout_marginTop="17dp"
            android:text="TextView"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/porsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nama_menu"
            android:layout_alignStart="@+id/nama_menu"
            android:layout_below="@+id/nama_menu"
            android:layout_marginTop="14dp"
            android:text="@string/porsi"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/jumlah_porsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tempat"
            android:layout_alignStart="@+id/tempat"
            android:layout_below="@+id/porsi"
            android:layout_marginTop="14dp"
            android:text="TextView"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jumlah_porsi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/harga"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/total_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/harga"
            android:layout_alignRight="@+id/harga"
            android:layout_below="@+id/harga"
            android:layout_marginTop="12dp"
            android:text="TextView"

            android:textAlignment="center" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
